src/assets/base.css
@import url('https://fonts.googleapis.com/css2?family=Lato&family=Roboto+Slab');

:root {
  --clr-green: #06BA63;
  --clr-blue: #45E5FA;
  --clr-blue-dark: #0a81d1;
  --clr-red: #FF312E;

  --clr-white: #ffffff;
  --clr-white-soft: #e6efe9;

  --clr-black: #181818;
  --clr-black-soft: #363537;

  --clr-border-light: rgba(139, 140, 137, 0.7);
  --clr-border-dark: rgba(255, 252, 232, 0.7);

  --ff-sans: 'Lato', sans-serif;
  --ff-serif: 'Roboto Slab', serif;

  --fs-base: 1rem;
  --fs-p: 1.2rem;
  --fs-big: 1.7rem;
}

:root {
  --clr-background: var(--clr-white);
  --clr-background-soft: var(--clr-white-soft);
  --clr-border: var(--clr-border-light);
  --clr-text: var(--clr-black);
  --clr-text-soft: var(--clr-black-soft);
}

@media (prefers-color-scheme: dark) {
  :root {
    --clr-background: var(--clr-black);
    --clr-background-soft: var(--clr-black-soft);
    --clr-border: var(--clr-border-dark);
    --clr-text: var(--clr-white);
    --clr-text-soft: var(--clr-white-soft);
  }
}

*,
*::before,
*::after {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html {
  font-family: var(--ff-sans);
  color: var(--clr-text);
  font-size: var(--fs-base);
}

body {
  min-height: 100vh;
  background-color: var(--clr-background);
  line-height: 1.6;
  font-weight: normal;
}

p {
  font-size: var(--fs-p);
}

.container-heading {
  font-size: var(--fs-big);
}

